# slide_show

./: Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  watcher.py
templates/: index.html  index_media.html
