[tool.poetry]
name = "slide-show"
version = "0.1.0"
description = ""
authors = ["TK_vicrrs <victor.roza@tarkuss.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
watchdog = "^4.0.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
